k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-world-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: hello-world
  policyTypes:
  - Ingress
  - Egress
  ingress:
  # Allow traffic from ALB subnets on port 3000
  - from:
    - ipBlock:
        cidr: 10.0.1.0/24
    - ipBlock:
        cidr: 10.0.2.0/24
    ports:
    - protocol: TCP
      port: 3000
  egress:
  #Allow HTTP to AWS APIs (ECR,STS Secrets Manager)
  - to: []
    ports:
    - protocol: TCP
      port: 443
